--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^1.0",
         "laraveles/spanish": "^1.2",
         "maatwebsite/excel": "^3.1",
+        "maddhatter/laravel-fullcalendar": "^1.3",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
